// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-username-field spec: Render logic -> should render \`placeholder\` and \`label values 1`] = `
<amplify-username-field label="New username *" placeholder="Enter new user name">
  <mock:shadow-root>
    <amplify-form-field fieldid="username" label="New username *" placeholder="Enter new user name"></amplify-form-field>
  </mock:shadow-root>
</amplify-username-field>
`;

exports[`amplify-username-field spec: Render logic -> should render default values by default 1`] = `
<amplify-username-field>
  <mock:shadow-root>
    <amplify-form-field fieldid="username" label="Username *" placeholder="Enter your username"></amplify-form-field>
  </mock:shadow-root>
</amplify-username-field>
`;
